Tools/DumpRenderTree/TestRunner.h
@@ -229,9 +229,6 @@ public:
 
     bool canOpenWindows() const { return m_canOpenWindows; }
     void setCanOpenWindows(bool canOpenWindows) { m_canOpenWindows = canOpenWindows; }
-
-    bool closeRemainingWindowsWhenComplete() const { return m_closeRemainingWindowsWhenComplete; }
-    void setCloseRemainingWindowsWhenComplete(bool closeRemainingWindowsWhenComplete) { m_closeRemainingWindowsWhenComplete = closeRemainingWindowsWhenComplete; }
     
     bool newWindowsCopyBackForwardList() const { return m_newWindowsCopyBackForwardList; }
     void setNewWindowsCopyBackForwardList(bool newWindowsCopyBackForwardList) { m_newWindowsCopyBackForwardList = newWindowsCopyBackForwardList; }
@@ -429,7 +426,6 @@ private:
     bool m_generatePixelResults { true };
     bool m_callCloseOnWebViews { true };
     bool m_canOpenWindows { false };
-    bool m_closeRemainingWindowsWhenComplete { true };
     bool m_newWindowsCopyBackForwardList { false };
     bool m_stopProvisionalFrameLoads { false };
     bool m_testOnscreen { false };
